--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,12 @@
 <resources>
     <string name="app_name">BeActive</string>
     <string name="logo_Text">Be Active</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+
+<!--    Register a login -->
+    <string name="registerButton">Zaregistrovať</string>
+    <string name="loginButton">Prihlásiť sa</string>
+    <string name="editTextEmail">E-mail</string>
+    <string name="editTextPassword">Heslo</string>
+    <string name="editTextPasswordOpakovane">Zopakovať heslo</string>
+    <string name="textViewRegistrovanie">Nemáte účet ?</string>
 </resources>
