#9 Pridanie fragmentu na meranie novej activity
Pridanie meranie casu na novu aktivitu
//TODD : Dorobit kroky, otocenie obrazovky, ratanie casu na pozadi

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">BeActive</string>
     <string name="logo_Text">Be Active</string>
 
-<!--    Register a login -->
+    <!--    Register a login -->
     <string name="registerButton">Zaregistrovať</string>
     <string name="loginButton">Prihlásiť sa</string>
     <string name="editTextEmail">E-mail</string>
@@ -10,4 +10,6 @@
     <string name="editTextPasswordOpakovane">Zopakovať heslo</string>
     <string name="textViewRegistrovanie"><u>Nemáte účet ?</u></string>
     <string name="textViewVytvoritUcet">Vytvoriť účet</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
