--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,9 @@
     <string name="textViewVytvoritUcet">Vytvoriť účet</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <!--    DialogText-->
+    <string name="wantCloseActivityCounter">Chcete ukončiť meranie activity?</string>
+    <string name="answearYes">Áno</string>
+    <string name="answearNo">Nie</string>
 </resources>
