#13 Pridanie bocneho menu
Pridanie bocneho menu s vlastnym stylom podla youtube:
https://www.youtube.com/watch?v=ZodMjakYj3A

//TODO: Implementovat listenery pre tlacidla v menu

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,7 @@
     <string name="wantCloseActivityCounter">Chcete ukončiť meranie activity?</string>
     <string name="answearYes">Áno</string>
     <string name="answearNo">Nie</string>
+
+    <string name="open">open</string>
+    <string name="close">close</string>
 </resources>
