#20 Pridanie chooseru pre cas aktivity
Pranie dialog framengtu pre moznost zvolenia casu aktivity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,7 @@
 
     <string name="open">open</string>
     <string name="close">close</string>
+
+    <string name="time_picker_text">Dĺžka aktivity</string>
+    <string name="time_picker_button_dalej">Pokračovať</string>
 </resources>
