#4 Presmerovanie pri prvotnej registracii
Pridanie presmerovanie plus handle bugs, ako napriklad....
Pokial sa registrujem a presmeruje ma profile fragment, tak ak dam button spat tak ma vrati do registracie co nechcem

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,8 @@
     <string name="editTextEmail">E-mail</string>
     <string name="editTextPassword">Heslo</string>
     <string name="editTextPasswordOpakovane">Zopakovať heslo</string>
+    <string name="editTextName">Meno</string>
+    <string name="editTextSurname">Priezvisko</string>
     <string name="textViewRegistrovanie"><u>Nemáte účet ?</u></string>
     <string name="textViewVytvoritUcet">Vytvoriť účet</string>
     <!-- TODO: Remove or change this placeholder text -->
